--- a/Nivelamento/Matemática/Aulas/.~aula1.ipynb
+++ b/Nivelamento/Matemática/Aulas/.~aula1.ipynb
@@ -10,22 +10,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
    "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
    "version": "3.11.1"
   },
+  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "1365787fee12ae768bfa8f8e94d881275077818d1d8b479cba43fb9741d1833d"
